<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilListName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/switchOniline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:hint="@string/fragmentlistcreation_listname" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/switchOniline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/fragmentlistcreation_switchOniline"
        app:layout_constraintBottom_toBottomOf="@+id/tilListName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tilListName"
        app:layout_constraintTop_toTopOf="@+id/tilListName" />
    <ImageButton
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/add_element"
        app:layout_constraintEnd_toStartOf="@+id/btDelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilListName"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/delete_element"
        app:layout_constraintBottom_toBottomOf="@+id/btAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btAdd"
        app:layout_constraintTop_toTopOf="@+id/btAdd"
        app:srcCompat="@android:drawable/ic_delete" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/switchOniline"
        app:layout_constraintStart_toStartOf="@+id/tilListName"
        app:layout_constraintTop_toBottomOf="@+id/btAdd"
        tools:itemCount="100"
        tools:listitem="@layout/items_creationlist" />



</androidx.constraintlayout.widget.ConstraintLayout>